objects/ssot__CareProgramProviderProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramContactId__c</fullName>
        <label>Care Program Contact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramProductId__c</fullName>
        <label>Care Program Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramProviderProductStatus__c</fullName>
        <label>Care Program Provider Product Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramProviderRole__c</fullName>
        <label>Care Program Provider Role</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Provider Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726572704_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramProviderProduct_CareProgr_rel</label>
        <referenceTo>ssot__CareProgramProduct__dlm</referenceTo>
        <relationshipLabel>CareProgramProviderProduct_CareProgr_rel</relationshipLabel>
        <relationshipName>rel_1716726572704_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726577470_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramProviderProduct_AccountId_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CareProgramProviderProduct_AccountId_rel</relationshipLabel>
        <relationshipName>rel_1716726577470_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>